explana-app/front/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: explana-client
spec:
  selector:
    matchLabels:
      app: explana-client
  template:
    metadata:
      labels:
        app: explana-client
    spec:
      containers:
      - name: explana-client
        image: myawesomeapps/explana-client:1.1
        resources:
          limits:
            memory: "512Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
